# maelstrom-node

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  vcpkg.json
include/maelstrom-node/: handler.hpp  message.hpp  node.hpp
src/: CMakeLists.txt  message.cpp  node.cpp
tests/: message_test.cpp
