cc_library(
    name = "maelstrom_node",
    srcs = [
        "src/message.cpp",
        "src/node.cpp",
    ],
    hdrs = glob(["include/maelstrom-node/**/*.hpp"]),
    copts = [
        "-std=c++23",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@boost//:algorithm",
        "@boost//:asio",
        "@nlohmann_json//:json",
        "@spdlog",
    ],
)

cc_test(
    name = "node_test",
    srcs = [
        "tests/message_test.cpp",
    ],
    copts = [
        "-std=c++23",
    ],
    deps = [
        ":maelstrom_node",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
